# INFO290-PortaRobleAustral

./: .gitignore  AsesoríaCruzada.txt  README.md  docker-compose.yml  package-lock.json  package.json
Documentación/: README.md
Manual de Instalación/: README.MD
backend/: Dockerfile  README.md  main.py  pyproject.toml
backend/db/: client.py
backend/db/models/: admin.py  articulo.py  colaboradores.py  inicio.py  instituciones.py  noticia.py  persona.py  practica.py  proyecto.py  tesis.py  titulos.py
backend/db/schemas/: admin.py  articulo.py  colaboradores.py  inicio.py  instituciones.py  noticia.py  persona.py  practica.py  proyecto.py  tesis.py  titulos.py
backend/middleware/: auth.py
backend/routers/: admin.py  articulos.py  colaboradores.py  inicio.py  instituciones.py  interconexiones.py  login.py  noticia.py  persona.py  practica.py  proyecto.py  sys_data.py  tesis.py  titulos.py
backend/utils/: date_utils.py
frontend/: README.md  package-lock.json  package.json
frontend/robleaustral/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/robleaustral/public/: index.html
frontend/robleaustral/src/: App.tsx
frontend/robleaustral/src/components/: Card.tsx  Carousel3D.tsx  ErrorPage.tsx  Footer.tsx  Pagination.tsx  ProtectedRoute.tsx  SearchButton.tsx  TarjetaIntegranteEquipo.tsx  TesisPracticasCard.tsx
frontend/robleaustral/src/components/css/: Card.css  Carousel3D.css  (+6 more)
frontend/robleaustral/src/css/: App.css  index.css
frontend/robleaustral/src/pages/: interfaces.ts
frontend/robleaustral/src/utils/: dateUtils.tsx
(+79 files in other folders)
